# ppt-gen

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LyricsToPPT.spec  README.md  auto_lyrics_downloader.py  buid_release.py  build_release.py  lyrics_to_ppt.py  requirements.txt  sequences.txt  sequences_sample.txt  template.pptx  test_ph.py  test_ppt.py  주를 바라보며.txt  하나님 아버지의 마음.txt  하늘의 것을 구하게 하소서.txt
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
docs/: ARCHITECTURE_MIGRATION.md  ImplementationMemory.md  Release.md  Service.md  prompt_ui.md
scripts/: LyricsToPPT.spec  _check_theme_font.py  _check_theme_patch.py  _compare_fonts.py  _inspect_master_fonts.py  _inspect_shape_structure.py  _test_lo_render.py  build_release.py  inspect_songlist_font.py
server/: convert_server.py  porr_server_main.py  requirements.txt
src/: auto_lyrics_downloader.py  constants.py  error_reporter.py  main.py  main_ctk.py  main_legacy.py  main_qt.py  main_ttk.py  powerpoint_com.py  ppt_builder.py  ppt_server_client.py  ppt_service.py  songlist_builder.py
tests/: test_auth_service.py  test_db_migration.py  test_error_reporter.py  test_graph_api.py  test_job_store.py  test_ph.py  test_porr_core_repertoire.py  test_porr_core_sequence.py  test_porr_core_slide_estimator.py  test_ppt.py  test_ppt_builder.py  test_ppt_server_client.py  test_sheet_service.py
tools/: build_sidecar.py  fix_sheet_parsing.py  generate_icons.py  reset_drive_sync.py  (+1 more)
(+91 files in other folders)
