[package]
name = "porr-desktop"
version = "0.1.0"
description = "PO,RR Desktop App"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "porr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
